[gd_scene load_steps=5 format=3 uid="uid://kbivn08wa58x"]

[ext_resource type="PackedScene" uid="uid://c2uhrd2n6ofht" path="res://entities/player/Player.tscn" id="1_glv2v"]
[ext_resource type="Script" uid="uid://ywekbl7ktfab" path="res://Main.gd" id="1_r0du0"]
[ext_resource type="PackedScene" uid="uid://bqc3dp5l7rhil" path="res://Map.tscn" id="1_uu6xs"]
[ext_resource type="PackedScene" uid="uid://b5qkf7euvh1u6" path="res://entities/enemies/Turret.tscn" id="4_cm0pq"]

[node name="Main" type="Node"]
script = ExtResource("1_r0du0")

[node name="Map" parent="." instance=ExtResource("1_uu6xs")]

[node name="Player" parent="." instance=ExtResource("1_glv2v")]
position = Vector2(576, 403)

[node name="Turret_1" parent="." instance=ExtResource("4_cm0pq")]
position = Vector2(580, 184)

[node name="Turret_2" parent="." instance=ExtResource("4_cm0pq")]
position = Vector2(580, 184)

[node name="Turret_3" parent="." instance=ExtResource("4_cm0pq")]
position = Vector2(580, 184)
